--- a/portofiol.html
+++ b/portofiol.html
@@ -72,7 +72,7 @@
       <div class="contact-list">
         <div class="contact-item" tabindex="0">
           <span class="contact-icon material-icons" aria-hidden="true">email</span>
-          <a href="mailto:youremail@example.com">youremail@example.com</a>
+          <a href="mailto:youremail@example.com">swaraj@example.com</a>
         </div>
         <div class="contact-item" tabindex="0">
           <span class="contact-icon material-icons" aria-hidden="true">phone</span>
